Added create invite

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -17,6 +17,7 @@
   "formDetails": "Form Details",
   "forms": "Forms",
   "help": "Help",
+  "HDSusername": "HDS username",
   "label": "Label",
   "language": "Language",
   "lightMode": "Light Mode",
