--- a/app/locales/es.json
+++ b/app/locales/es.json
@@ -17,6 +17,7 @@
   "formDetails": "Form Details",
   "forms": "Formulario",
   "help": "Ayuda",
+  "HDSusername": "HDS username",
   "label": "Etiqueta",
   "language": "Idioma",
   "lightMode": "Modo Ligero",
